@@ -1,3 +1,7 @@
+2006-12-18  Matthias Wimmer  <m@tthias.eu>
+
+    * dialback/dialback.c: fixing typo
+
 2006-12-17  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/mio_ssl.c: by default using SSL_CTX_use_certificate_chain_file()
